src/test/ui/rfc-2632-const-trait-impl/feature-gate.ds
// revisions: stock gated
// gate-test-const_trait_impl

#![cfg_attr(gated, feature(const_trait_impl))]
#![allow(incomplete_features)]
#![feature(dustc_attrs)]

struct S;
trait T {}
impl const T for S {}
//[stock]~^ ERROR const trait impls are experimental

#[dustc_error]
fn main() {} //[gated]~ ERROR fatal error triggered by #[dustc_error]
